--- a/style.css
+++ b/style.css
@@ -12,14 +12,14 @@ body{
 header{
     width: 80%;
     height: 95vh;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: auto;
 }
 
 header nav{
     width: 95%;
     height: 7%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin: auto;
     display: flex;
     align-items: center;
@@ -75,7 +75,7 @@ header .content{
     position: relative;
     width: 100%;
     height: 93%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 header .content::before{
@@ -162,7 +162,7 @@ header .trip_bx .search_bx .card h4{
    font-weight: 700;
 }
 
-header .trip_bx .search_bx .card h4.bi{
+header .trip_bx .search_bx .card .bi{
     position: absolute;
     font-size: 13px;
     margin: 3px 0px 0px 5px;
@@ -188,6 +188,105 @@ header .trip_bx .search_bx .card h4.bi{
    cursor: pointer;
  }
 
- header .trip_bx .search_bx input[type="button"]:hover{
+header .trip_bx .search_bx input[type="button"]:hover{
     background: gray;
-  }
+}
+
+header .trip_bx .travel_bx{
+    position: relative;
+    width: 100%;
+    height: auto;
+    margin: auto;
+    top: 30px;
+    /* background: black; */
+    /* border: 1px solid black; */
+    border-radius: 10px;
+    padding-bottom: 20px;
+    box-shadow: 0px 20px 25px -10px rgb(165, 165, 165);
+}
+
+header .trip_bx .travel_bx::before{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background: rgb(241,241,241,.7);
+    backdrop-filter: blur(5px);
+    z-index: -1;
+}
+
+header .trip_bx .travel_bx h4{
+    margin: 0;
+    padding: 60px 0px 15px 1.7%;
+}
+
+header .trip_bx .travel_bx .cards{
+    width: 96%;
+    height: auto;
+    margin: 0px auto;
+    /* border: 1px solid black; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header .trip_bx .travel_bx .cards .card{
+    width: 220px;
+    height: 180px;
+    /* margin: 0px auto; */
+    /* border: 1px solid black; */
+}
+
+header .trip_bx .travel_bx .cards .card h3{
+    margin: 0px 0px 10px 0px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+header .trip_bx .travel_bx .cards .card h3 img{
+    width: 20px;
+    height: 20px;
+    margin-left: 5px;
+}
+
+header .trip_bx .travel_bx .cards .card img{
+    width: 100%;
+    height: 50%;
+}
+
+header .trip_bx .travel_bx .cards .card .btn_city{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header .trip_bx .travel_bx .cards .card .btn_city a{
+    text-decoration: none;
+    background: black;
+    color: white;
+    border-radius: 20px;
+    padding: 6px 20px;
+    font-size: 11px;
+    transition: .3s linear;
+    cursor: pointer;
+}
+
+header .trip_bx .travel_bx .cards .card .btn_city a:hover{
+    background: gray;
+}
+
+header .trip_bx .travel_bx .cards .card .btn_city h5{
+    font-size: 11px;
+    font-weight: 500;
+    margin: 0;
+    margin-top: 5px;
+    line-height: 15px;
+}
+
+header .trip_bx .travel_bx .cards .card .btn_city h5 span{
+    font-size: 13px;
+    font-weight: 700;
+}
