--- a/style.css
+++ b/style.css
@@ -290,3 +290,164 @@ header .trip_bx .travel_bx .cards .card .btn_city h5 span{
     font-size: 13px;
     font-weight: 700;
 }
+
+.offers{
+    width: 60%;
+    height: auto;
+    /* border: 1px solid black; */
+    margin: auto;
+    margin-top: 100px;
+}
+
+.offers h1{
+    font-weight: 600;
+    text-align: center;
+    margin: 0;
+}
+
+.offers p{
+    font-weight: 500;
+    text-align: center;
+    margin: 0;
+}
+
+.offers .cards{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* border: 1px solid black; */
+    flex-wrap: wrap;
+}
+
+.offers .cards .card{
+    position: relative;
+    width: 200px;
+    height: 350px;
+    /* border: 1px solid black; */
+    margin: 10px;
+}
+
+.offers .cards .card h3{
+    width: 100%;
+    padding: 5px 0px;
+    background: palegreen;
+    border-radius: 20px;
+    font-size: 15x;
+    display: grid;
+    place-items: center;
+    margin: auto;
+}
+
+.offers .cards .card .img_text{
+    position: relative;
+    width: 100%;
+    height: 250px;
+    margin-top: 5px;
+}
+
+.offers .cards .card .img_text img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.offers .cards .card .img_text h4{
+    position: absolute;
+    font-size: 9px;
+    padding: 10px 15px;
+    bottom: 0;
+    margin: 0;
+    color: white;
+    z-index: 2;
+}
+
+.offers .cards .card .img_text h4::before{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: rgb(255, 255, 255,.1);
+    backdrop-filter: blur(5px);
+    z-index: -1;
+    bottom: 0;
+    left: 0;
+}
+
+.offers .cards .card .cont_bx{
+    width: 99%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid rgb(184, 184, 184);
+    padding: 5px 0px;
+    border-radius: 0px 0px 5px 5px;
+}
+
+.offers .cards .card .cont_bx .price , .days{
+    margin: 0px 8px;
+
+}
+.offers .cards .card .cont_bx .price .heart_chat{
+    display: flex;
+    align-items: center; 
+}
+.offers .cards .card .cont_bx .price .heart_chat i:nth-child(1){
+    color: red;
+    font-size: 13px;
+    margin-right: 10px;
+}
+
+.offers .cards .card .cont_bx .price .heart_chat i span{
+    color: black;
+    font-size: 12px;
+    margin-left: 2px;
+    font-style: normal;
+}
+
+.offers .cards .card .cont_bx .price .heart_chat i:nth-child(2){
+    color: rgb(112, 196, 229);
+    font-size: 13px;
+    margin-right: 10px;
+}
+
+.offers .cards .card .cont_bx .price .info_price {
+    display: flex;
+    align-items: center;
+    margin-top: 3px;
+}
+
+.offers .cards .card .cont_bx .price .info_price a{
+    text-decoration: none;
+    color: black;
+    font-size: 11px;
+    font-weight: 700;
+    transition: .3s linear;
+    margin-right: 10px;
+}
+
+.offers .cards .card .cont_bx .price .info_price a:hover{ 
+    color: gray;
+}
+
+.offers .cards .card .cont_bx .price .info_price h4{
+    margin: 0;
+    font-size: 13px;
+}
+
+.offers .cards .card .cont_bx .days{
+    background: black;
+    color: white;
+    font-size: 8px;
+    border-radius: 50%;
+    padding: 10px;
+    text-align: center;
+    cursor: pointer;
+    transition: .3s linear;
+}
+
+.offers .cards .card .cont_bx .days:hover{
+    transform: rotate(360deg);
+}
+
